# AI-Chatbot-Resume

./: app.py  chatbot.py  pyproject.toml  requirements.txt
templates/: index.html
